Settings Sync: Fix CloseUI logic in both Settings and MD Settings.

Previously, the Sync Settings overlay was only properly marked closed if
it was the last-opened instance of Sync Settings.

This patch fixes that.

BUG=636693

Review-Url: https://codereview.chromium.org/2244733002
Cr-Commit-Position: refs/heads/master@{#412020}

Former-commit-id: 0e9a88ea078bd8dbb4f095f8fbc7699716b30f63